--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.0",
+    "universal-cookie": "^4.0.4",
+    "redux-form": "^8.3.9",
+    "axios": "^1.1.3",
+    "react-router-dom": "^6.4.2",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
